--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
             padding: 10px;
         }
 
-        /* Added style for better contrast */
+        /* Modified style for better contrast */
         label {
-            color: white;
+            color: #ffffff; /* White color for better contrast */
             margin-right: 10px;
         }
     </style>
@@ -89,7 +89,7 @@
         <h2>Welcome to Our Website</h2>
         <p>This is a simple AI-generated website with various features. Feel free to explore!</p>
 
-        <!-- Added label for better accessibility -->
+        <!-- Modified label style for better contrast -->
         <label for="userInput">Enter something:</label>
         <input type="text" id="userInput" placeholder="Enter something...">
     </section>
