--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
 
         /* Modified style for better contrast */
         label {
-            color: #ffffff; /* White color for better contrast */
+            color: #ffffff; /* White color for text */
+            background-color: #333; /* Dark background color for better contrast */
+            padding: 5px 10px; /* Adjust padding for better appearance */
             margin-right: 10px;
         }
     </style>
